--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/",
+      "source": "/multi-thread",
       "headers": [
         {
           "key": "Cross-Origin-Opener-Policy",
@@ -13,5 +13,9 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "/single-thread", "destination": "/index.html" },
+    { "source": "/multi-thread", "destination": "/index.html" }
   ]
 }
