--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,6 @@
   "headers": [
     {
       "source": "/multi-thread",
-      "has": [
-        {
-          "type": "query",
-          "key": "multi-thread"
-        }
-      ],
       "headers": [
         {
           "key": "Cross-Origin-Opener-Policy",
@@ -19,5 +13,9 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "/single-thread", "destination": "/index.html" },
+    { "source": "/multi-thread", "destination": "/index.html" }
   ]
 }
