--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vite-plugin-top-level-await": "^1.4.1"
   },
   "dependencies": {
-    "@aztec/bb.js": "file:../aztec-packages/barretenberg/ts",
+    "@aztec/bb.js": "0.84.0",
     "@noir-lang/noir_js": "^1.0.0-beta.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
